# ChzzkLinux

./: Cargo.toml  README.md  channels.toml  launcher.sh  launcher_cisol.sh
src/: main.rs
