[package]
name = "ChzzkLinux"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } #for HTTP
tokio = { version = "1", features = ["full"] } #async 
serde = { version = "1.0", features = ["derive"] } #json parsing
serde_json = "1.0"
toml = "0.8"
